# llm-evaluation-apiserver

./: .env.template  .gitignore  README.md  pyproject.toml
api/: api.py
api/config/: constants.py  custom_model.py
api/controller/: dataset.py  evaluation.py
api/model/: api_request.py  dataset.py  evaluation.py
api/service/: citation_evaluation_service.py  citation_groundtruth_service.py  dataset_service.py  deepeval_service.py  elasticsearch_client.py  llm_judge_service.py
api/utils/: comparison.py  text_splitter.py
data/dataset/: data.json
deployment/: docker-compose.yml
